deploy/openshift/overlays/dev/patches/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mediacms-dev
  labels:
    app.kubernetes.io/name: mediacms
    app.kubernetes.io/part-of: mediacms
    app.kubernetes.io/managed-by: argocd
