deploy/openshift/overlays/dev/patches/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: mediacms-dev
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uwsgi
  namespace: mediacms-dev
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-short
  namespace: mediacms-dev
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-long
  namespace: mediacms-dev
spec:
  replicas: 1
