deploy/openshift/overlays/dev/patches/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: mediacms-dev
spec:
  template:
    spec:
      containers:
      - name: mediacms
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "1000m"
            memory: "1Gi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uwsgi
  namespace: mediacms-dev
spec:
  template:
    spec:
      containers:
      - name: mediacms
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "1000m"
            memory: "1Gi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-short
  namespace: mediacms-dev
spec:
  template:
    spec:
      containers:
      - name: mediacms
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "1000m"
            memory: "1Gi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-long
  namespace: mediacms-dev
spec:
  template:
    spec:
      containers:
      - name: mediacms
        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"
          limits:
            cpu: "2000m"
            memory: "2Gi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-beat
  namespace: mediacms-dev
spec:
  template:
    spec:
      containers:
      - name: mediacms
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
