deploy/openshift/overlays/dev/patches/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: web
  namespace: mediacms
spec:
  host: mediacms-dev.apps.example.com
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
